# EcoLedger

./: .gitignore  README.md  alembic.ini
.github/workflows/: ima_lint.yml
ima/: README.md  Taskfile.yml  alembic.ini  main.py  pyproject.toml
ima/alembic/: env.py
ima/alembic/versions/: dbbae723b981_create_users_table.py
ima/app/: ROADMAP.md  main.py
ima/app/api/v1/: __init__.py
ima/app/api/v1/health/: __init__.py  docs.py  router.py  schemas.py  utils.py
ima/app/core/: config.py  redis_cache.py  response.py  tracing.py
ima/app/db/: base.py  session.py
ima/app/db/users/: models.py
ima/app/tests/integration/: test_health.py
ima/infra/: Dockerfile  Dockerfile.locust  Dockerfile.prod  docker-compose.jaeger.yml  docker-compose.locust.yml  docker-compose.prod.yml
ima/locust/: config.py  locustfile.py
ima/locust/scenarios/: health_flow.py
